2010-01-01  Carles Pina i Estany  <carles@pina.cat>

	* commands/help.c: Include `grub/mm.h' and `grub/normal.h'.
	(grub_cmd_help): Print the cmd->name before the cmd->summary. Cut the
	string using string width.
	* normal/menu_text.c (grub_print_message_indented): Use
	grub_print_spaces and not print_spaces.
	(print_timeout): Likewise.
	(print_spaces): Move to...
	* include/grub/term.h: ... here. Change the name to grub_print_spaces.

2010-01-01  Robert Millan  <rmh.grub@aybabtu.com>

	Import from Gnulib.

	* gnulib/getdelim.c: New file.
	* gnulib/getline.c: Likewise.

2009-12-31 BVK Chaitanya  <bvk.groups@gmail.com>

	* include/grub/list.h (grub_assert_fail): Removed.
	(grub_bad_type_cast_real): New function.
	(grub_bad_type_cast): New macro.
	(GRUB_AS_LIST): Use grub_bad_type_cast.
	(GRUB_AS_LIST_P): Likewise.
	(GRUB_AS_NAMED_LIST): Likewise.
	(GRUB_AS_NAMED_LIST_P): Likewise.
	(GRUB_AS_PRIO_LIST): Likewise.
	(GRUB_AS_PRIO_LIST_P): Likewise.
	* include/grub/handler.h (GRUB_AS_HANDLER): Likewise.

2009-12-29 Vladimir Serbinenko  <phcoder@gmail.com>

	* loader/sparc64/ieee1275/linux.c (GRUB_MOD_INIT (linux)):
	Fix syntax error.

2009-12-29  Robert Millan  <rmh.grub@aybabtu.com>

	* configure.ac: Check for TARGET_CFLAGS initialization before we
	initialize it ourselves (sigh).
	Move a few modifications to TARGET_CFLAGS to be unconditional
	(extra warning flags, loop alignment, i386 CPU extensions, GCC 4.4
	eh_frame)

	* gettext/gettext.c (grub_gettext_delete_list): Add `void' argument.
	* term/i386/pc/at_keyboard.c
	(keyboard_controller_wait_untill_ready): Likewise.
	(keyboard_controller_led): Rename `led_status' paramter to avoid
	name conflict.

2009-12-28  Carles Pina i Estany  <carles@pina.cat>

	* normal/misc.c (grub_normal_print_device_info): Add spaces and double
	quotes.

2009-12-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* kern/parser.c (grub_parser_split_cmdline): Don't dereference NULL.

2009-12-27  Vladimir Serbinenko  <phcoder@gmail.com>
